references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/StateUsage_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:4eb7753e786f6675cee393a693cab42bde8ad552ad4f33652935ededf733b74a
size 3868
